# blackbox

./: .gitattributes  .gitignore  Cargo.toml  FEATURES.md  GRAMMAR.md  LICENSE  README.md  cli.js  tsconfig.json
.cargo/: config.toml
.github/scripts/: import-msix-signing-certificate.ps1  package-msix-sideload-bundle.ps1  sign-msix.ps1  stage-windows-release-artifacts.ps1
.github/workflows/: editor-linux.yml  editor-macos.yml  editor-release.yml  editor-windows.yml
apps/android/: README.md
apps/android/blackbox/src/main/cpp/: CMakeLists.txt  blackbox_jni.cpp
apps/cli/: Cargo.toml
apps/cli/src/: branches.rs  harness.rs  main.rs  play.rs
apps/editor/: .gitignore  .oxlintrc.json  README.md  electron-builder.yml  eslint.config.mjs  index.html  package-lock.json  package.json  rolldown.config.ts  server.js  tsconfig.json
apps/editor/electron/: cliMode.mjs  cliMode.test.mjs  dependencyInstaller.mjs  icon.mjs  ideHost.mjs  ideSpawn.mjs  ipcRpc.mjs  local-transport.mjs  logFile.mjs  main.mjs  mcpCredentials.mjs  mcpCredentials.test.mjs  mcpHost.mjs  mcpHost.test.mjs  menu.mjs  preload.cjs  preload.mjs  serverHost.mjs  serverProcess.mjs  shellPath.mjs
apps/editor/players/: registry.mjs
apps/editor/public/: boot-splash.css
apps/editor/resources/: msix-signing.cer
apps/editor/scripts/: build-appx-assets.mjs  build-electron.mjs  build-icon.mjs  build-release.mjs  build-tools.mjs  bump-version.mjs  clean-js-dist.mjs  ensure-electron.mjs  ensure-tools.mjs  stage-cli.mjs  stage-preview-workspace.mjs  stage-shared-lib.mjs  sync-build-stages.mjs  sync-dist.mjs  sync-preview.mjs
apps/editor/server/: app.js  buildRuns.test.js  cargo.js  cliStaging.js  config.js  editorConfig.js  editorConfig.test.js  exampleContent.js  idePlugins.test.js  localTransport.test.js  mcpAuditDiff.mjs  mcpAuditLog.mjs  mcpHelpers.mjs  mcpPatch.mjs  mcpPatch.test.js  mcpProtocol.mjs  mcpSchema.mjs  mcpSchema.test.js  mcpServer.mjs  prefs.js  (+18 more)
apps/homepage/: .gitignore  package-lock.json  package.json  tsconfig.json
apps/ios/: README.md
apps/mobile/: .gitignore  .oxlintrc.json  README.md  package-lock.json  package.json
apps/web/: .oxfmtrc.json  .oxlintrc.json  README.md  eslint.adventure-react-compiler.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  preview.html  rolldown.config.mjs  rolldown.config.ts  rolldown.preview.config.ts  server.js  tsconfig.base.json  tsconfig.bundler.json  tsconfig.game.json  tsconfig.json  vercel.json
engine/bundler/: Cargo.toml  README.md
engine/bundler-cook/: Cargo.toml  README.md
engine/bundler-cook/src/: lib.rs
engine/bundler/src/: cache.rs  cook.rs  deps.rs  doctor.rs  format.rs  inspect.rs  lib.rs  main.rs  media.rs  platform.rs  scenario_io.rs
engine/convert/: Cargo.toml  README.md
engine/convert/src/: error.rs  lib.rs  main.rs
engine/convert/src/audio/: decode.rs  mod.rs  pipeline.rs
engine/convert/src/audio/formats/: aac.rs  mod.rs  wav.rs
engine/convert/src/audio/formats/opus/: mod.rs  ogg.rs
engine/convert/src/texture/: mod.rs  resize.rs
engine/convert/src/texture/formats/: jpeg.rs  png.rs  webp.rs
engine/convert/tests/: conversion.rs
engine/core/: Cargo.toml
engine/core/src/: assets.rs  check.rs  choice_gate.rs  command.rs  compat.rs  compile.rs  condition.rs  content.rs  effect.rs  error.rs  gate.rs  item_action.rs  lib.rs  relationship.rs  rng.rs  roll_log.rs  state.rs  text.rs  transition.rs  validation.rs  value.rs  view.rs
engine/core/src/content/: library.rs
engine/core/src/engine/: cache.rs  mod.rs  view_build.rs
engine/core/src/expr/: ast.rs  eval.rs  mod.rs  parse.rs
engine/core/src/format/: mod.rs  view_json.rs
engine/core/src/logging/: formatters.rs  mod.rs  sink.rs
engine/core/tests/: engine_character_tests.rs  engine_coverage_tests.rs  engine_debug_tests.rs  engine_edge_tests.rs  engine_flow_tests.rs  engine_gate_tests.rs  engine_library_tests.rs  engine_skill_check_tests.rs  engine_text_tests.rs  logging_tests.rs  support.rs  view_delta_tests.rs
engine/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
engine/ffi/include/: blackbox.h
engine/ffi/src/: ffi.rs  lib.rs  logging.rs
engine/format/: Cargo.toml
engine/format/src/: lib.rs
engine/format/src/json/: bundle.rs  convert.rs  decode.rs  encode.rs  host.rs  mod.rs  resolve.rs  wire.rs  wire_schema.rs
engine/lint/: Cargo.toml  README.md
engine/lint/src/: discover.rs  graph.rs  location.rs  main.rs  refs.rs  report.rs  scenario_io.rs
engine/lint/src/checks/: assets.rs  cook.rs  dead_ends.rs  death_nodes.rs  items.rs  mod.rs  reachability.rs  references.rs  skill_checks.rs  tests.rs  validate.rs
engine/lint/src/rules/: catalog.rs  characters.rs  library.rs  mod.rs  registry.rs  relationships.rs  source_bundle.rs  wire.rs
engine/output/: Cargo.toml
engine/scout/: Cargo.toml
engine/scout/src/: discover.rs  fuzzy.rs  harvest.rs  load.rs  main.rs
engine/simulator/: Cargo.toml
engine/simulator/src/: issues.rs  main.rs  playtime.rs  report.rs
engine/simulator/src/sim/: abstraction.rs  analytics.rs  coverage.rs  death_search.rs  goal_search.rs  goals.rs  graph.rs  mod.rs  preconditions.rs  work.rs  worker.rs
engine/wasm/: Cargo.toml
engine/wasm/src/: lib.rs  logging.rs
scripts/: .oxfmtrc.json  .oxlintrc.json  android-ndk.mjs  build-all.mjs  build-android-aarch64.mjs  build-ios-aarch64.mjs  build-logos.mjs  build-macos-aarch64.mjs  build-web-wasm.mjs  package-lock.json  package.json  strip-asset-metadata.mjs  write-grammar.mjs
scripts/cli/: main.mjs  pipeline.mjs  prepare.mjs
scripts/lib/: README.md  adventure.mjs  adventureDev.mjs  android-ndk.mjs  build-context.mjs  buildGameCss.mjs  buildGameCss.test.mjs  cargo.mjs  fs-utils.mjs  gamePaths.mjs  paths.mjs  platformAndroid.mjs  platformAndroid.test.mjs  platformIcons.mjs  platformIos.mjs  platformIos.test.mjs  platformSharp.mjs  platformSplash.mjs  reactCompilerFlag.mjs  reactCompilerPlugin.d.mts  reactCompilerPlugin.mjs  spawn.mjs  vercelDeploy.mjs  webBuildAliases.mjs  webBuildAliases.test.mjs  webRolldownResolve.mjs
tests/assets/: assets.json
(+602 files in other folders)
