[workspace]
members = [
    "engine/bundler-cook",
    "engine/bundler",
    "engine/convert",
    "engine/core",
    "apps/cli",
    "engine/ffi",
    "engine/format",
    "engine/lint",
    "engine/output",
    "engine/scout",
    "engine/simulator",
    "engine/wasm",
]
resolver = "2"

[workspace.package]
description = "Build branching story games visually, then ship them anywhere."
license = "MIT"
repository = "https://github.com/martindeveloper/blackbox"

# Strip symbols from release binaries. The packaged editor ships blackbox-bundler/lint/
# simulator (~12M unstripped); stripping cuts each ~30% with no runtime impact.
[profile.release]
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Pedantic/nursery omitted — they flood output with style/doc nits we don't enforce.
