[package]
name = "blackbox-bundler-cook"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[lib]
name = "blackbox_bundler_cook"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
