[package]
name = "blackbox"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bumpalo = { version = "3.16", features = ["collections"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
rustc-hash = "1"

[dev-dependencies]
blackbox-format = { path = "../format" }
