[package]
name = "blackbox-ffi"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license.workspace = true

[lints.rust]
unsafe_code = "allow"

[lib]
name = "blackbox_ffi"
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
blackbox-engine = { package = "blackbox", path = "../core" }
blackbox-format = { path = "../format" }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
serde_json = "1.0"
