[package]
name = "blackbox-format"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[lib]
name = "blackbox_format"

[dependencies]
blackbox-engine = { package = "blackbox", path = "../core" }
rmp-serde = "1.3"
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
