[package]
name = "blackbox-lint"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "blackbox-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blackbox = { path = "../core" }
blackbox-bundler-cook = { path = "../bundler-cook" }
blackbox-format = { path = "../format" }
blackbox-output = { path = "../output" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
