[package]
name = "blackbox-scout"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "blackbox-scout"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blackbox = { path = "../core" }
blackbox-format = { path = "../format" }
blackbox-output = { path = "../output" }
memchr = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
